--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Refresh" content="0; url=library/index.html" />
+    <meta http-equiv="Refresh" content="0; url=library/index.html">
     <link rel="shortcut icon" href="./library/assets/icons/favicon.ico" type="image/x-icon">
     <title>Brooklyn Public Library</title>
 </head>
