feat:added initial assets

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Audio Player</title>
 </head>
 <body>
+    <img class="background" src="./assets/img/lemonade.png" alt="track background">
     <header></header>
     <main class="main">
-        <img src="" alt="track background">
         <div class="player-container"></div>
     </main>
     <footer class="footer">
