--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -19,15 +19,17 @@
                 <div class="controls-container">
                     <img class="play-pause paused" src="./assets/svg/play.png" alt="play_btn">
                     <div class="track-text">
-                        <span class="text artist">asdfasdfasdf</span>
-                        <span class="text title">asdfasdfasdf</span>
+                        <span class="text artist"></span>
+                        <span class="text title"></span>
                     </div>
                     <div class="track-controls">
                         <img src="./assets/svg/backward.png" alt="backward_btn" class="backward control-btn">
                         <img src="./assets/svg/forward.png" alt="forward_btn" class="forward control-btn">
                     </div>
                 </div>
+                <div class="start time"></div>
                 <input type="range" id="slider" min="0" max="100" value="0">
+                <div class="end time"></div>
             </div>
         </div>
     </main>
