feat: finished the app

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -34,9 +34,9 @@
         </div>
     </main>
     <footer class="footer">
-        <a href="" class="github">@amrkov5</a>
+        <a href="https://github.com/amrkov5" class="github">@amrkov5</a>
         <span class="year">2023</span>
-        <img src="" alt="rsschool logo">
+        <a href="https://rs.school/js-stage0/"><img src="./assets/svg/logo.svg" alt="rsschool logo"></a>
     </footer>
     <script type="module" src="./index.js"></script>
 </body>
