--- a/random-game/index.html
+++ b/random-game/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main class="main">
-        <canvas id="canvas" width="550" height="768"></canvas>
+        <!-- <canvas id="canvas" width="550" height="768"></canvas> -->
     </main>
     <footer class="footer"></footer>
 </body>
