refactor: refactored footer and game count

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Flappy Bird</title>
 </head>
 <body>
     <main class="main">
         <!-- <canvas id="canvas" width="550" height="768"></canvas> -->
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <a href="https://github.com/amrkov5">@amrkov5</a>
+        <span>2023</span>
+        <a href="https://rs.school/js-stage0/"><img src="./assets/logo.svg" alt="rs-logo"></a>
+    </footer>
 </body>
 <script src="./script.js"></script>
 </html>
